<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Android Clean Architecture</string>
  <string name="url">http://www.android10.org/</string>

  <string name="activity_title_city_list">Cities List</string>
  <string name="activity_title_weather">Weather</string>

  <string name="btn_text_load_data">Load Sample Data</string>
  <string name="btn_text_retry">Retry</string>

  <string name="view_text_email">Email:</string>
  <string name="view_text_followers">Followers:</string>
  <string name="view_text_description">Description:</string>

  <string name="string_content_description">Non accessible view</string>

  //Exception messages
  <string name="exception_message_generic">There was an application error</string>
  <string name="exception_message_no_connection">There is no internet connection</string>
  <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
  <string name="london">London</string>
  <string name="clear_sky">Clear sky</string>
  <string name="currently_19">Currently 19°</string>
  <string name="today_15_22">Today 15°-22°</string>
  <string name="celsius">Celsius</string>
  <string name="fahrenheit">Fahrenheit</string>
  <string name="fragment_args_cannot_be_null">Fragment arguments cannot be null</string>
  <string name="weather_icon">Weather icon</string>
</resources>
